Fix closed pr notification icon color on mobile
The generator is picking this up, but the green variant comes after the red one so we need to manually style this.

--- a/github-dark.css
+++ b/github-dark.css
@@ -6401,7 +6401,8 @@
   .delete-owners-button:hover, .dangerzone-module h4, .deprecation-notice a,
   .billing-addon-items tr.total-row *, .comment-form-error, .comment-form-stale,
   .markdown-body .absent, .text-red, .error, .release-label.draft,
-  input[id="label-color-"]:invalid {
+  input[id="label-color-"]:invalid,
+  body[class="page-responsive"] .color-icons .closed {
     color: #f44 !important;
   }
   /* blue purple */
